MB-19378 Handle memory leaks in context initialization

Memory allocated dynamically was not freed in the catch clause,
when exceptions happened. Also release resource if
initialization fails.

Change-Id: I4233a5104a03805beda09291f9a346f60379fdbb
Reviewed-on: http://review.couchbase.org/63412
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Volker Mische <volker.mische@gmail.com>